# P07_POC

./: .gitignore  ConvNeXt.py  DINOv3.py  Goldstein_Ludivine_1_pretraitement_022026.ipynb  P07_POC_Goldstein_Ludivine.rar  P07_POC_presentation.md  Plan de travail prévisionnel POC.pptx  Plan_prévisionnel_P07_POC.docx  README_CACHE.md  Swin_Transformer  Untitled-1.ipynb  VIT_Transformer.py  app.py  app_complete.py  convnext_results.txt  dinov3_results.txt  download_swin_model.py  eda_metadata.csv  pyproject.toml  requirements.txt
.streamlit/: config.toml
P07_POC_Goldstein_Ludivine/Goldstein_Ludivine_2_notebook_032026/: DINOv3.py  eda_metadata.csv
P07_POC_Goldstein_Ludivine/Goldstein_Ludivine_4_dashboard_032026/: app.py
