[project]
name = "p07-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "huggingface-hub>=1.7.1",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "plotly>=6.6.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.55.0",
    "tensorflow>=2.21.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
